# yolov5_wrapper

./: CMakeLists.txt  README.md  package.xml
config/: config_yolov5_wrapper.yaml
launch/: yolov5_wrapper.launch
scripts/: test_node.py  testing_node.py  yolo_detector.py  yolov5_wrapper_node.py
